--- a/package.json
+++ b/package.json
@@ -8,19 +8,49 @@
     "export": "next export",
     "start": "next start",
     "lint": "next lint",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "generate:licenses": "license-checker-rseidelsohn --direct --nopeer --unknown --relativeLicensePath --relativeModulePath --json --out=public/licenses.json"
   },
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@fontsource/public-sans": "^4.5.12",
+    "@hello-pangea/dnd": "^16.3.0",
+    "@mantine/code-highlight": "^7.1.5",
+    "@mantine/core": "^7.1.5",
+    "@mantine/dates": "^7.1.5",
+    "@mantine/dropzone": "^7.1.5",
+    "@mantine/form": "^7.1.5",
+    "@mantine/hooks": "^7.1.5",
+    "@mantine/modals": "^7.1.5",
+    "@mantine/notifications": "^7.1.5",
+    "@mantine/nprogress": "^7.1.5",
+    "@mantine/spotlight": "^7.1.5",
+    "@mantine/tiptap": "^7.1.5",
     "@mui/joy": "^5.0.0-alpha.78",
-    "@tauri-apps/api": "^1.3.0",
+    "@tabler/icons-react": "^2.39.0",
+    "@tauri-apps/api": "^1.5.1",
+    "@tiptap/extension-highlight": "^2.1.12",
+    "@tiptap/extension-link": "^2.1.12",
+    "@tiptap/extension-subscript": "^2.1.12",
+    "@tiptap/extension-superscript": "^2.1.12",
+    "@tiptap/extension-text-align": "^2.1.12",
+    "@tiptap/extension-underline": "^2.1.12",
+    "@tiptap/pm": "^2.1.12",
+    "@tiptap/react": "^2.1.12",
+    "@tiptap/starter-kit": "^2.1.12",
     "@types/node": "20.1.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "badge-maker": "^3.3.1",
+    "clsx": "^2.0.0",
+    "core-js": "^3.33.1",
+    "dayjs": "^1.11.10",
+    "dexie": "^3.2.4",
+    "dexie-react-hooks": "^1.1.6",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
+    "license-checker-rseidelsohn": "^4.2.10",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -28,6 +58,9 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1.3.1"
+    "@tauri-apps/cli": "^1.5.5",
+    "postcss-preset-mantine": "^1.9.0",
+    "postcss-simple-vars": "^7.0.1",
+    "prettier": "3.0.3"
   }
 }
